data/derived/sp14/progs/unify/prog3941.ml.out
Characters 71-83:
  | h::t -> if h = 0 then removeZero t;;
                          ^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type unit
